--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pprintpp = "^0.4.0"
 python-dotenv = "^1.0.0"
 pypdf2 = "^3.0.1"
 streamlit = "^1.24.1"
+ansi2html = "^1.8.0"
 
 
 [tool.poetry.group.dev.dependencies]
